--- a/adapt_cluster_provisioning/roles/galaxy/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/galaxy/tasks/main.yml
@@ -104,7 +104,7 @@
 - name: Fix permissions for init script
   file: path=/etc/init.d/galaxy mode=755
 - name: Change path to galaxy in init script
-  lineinfile: line="DIR={{ galaxy_share_dir }}"
+  lineinfile: line="DIR={{ galaxy_path }}"
               regexp="galaxy_dist"
               dest=/etc/init.d/galaxy
 - name: Change group init script runs under to galaxy
