--- a/adapt_cluster_provisioning/roles/mount_shares/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/mount_shares/tasks/main.yml
@@ -1,16 +1,20 @@
 ---
 
-- name: Install NFS
+- name: Install clients
   apt: name={{ item }} state=installed
   with_items:
   - nfs-common
+  - glusterfs-client
 
 - name: Create mount points
   file: path={{ item }} state=directory
   with_items: mount_paths
 
-- name: Mount data, tool, galaxy, ftp volumes
-  mount: src={{ item.0 }} name={{ item.1 }} fstype=nfs state=mounted opts=defaults
+- name: Mount tool, galaxy, ftp volumes
+  mount: src={{ item.0 }} name={{ item.1 }} fstype=nfs state=mounted opts=defaults,_netdev
   with_together:
-  - mount_shares
-  - mount_paths
+  - nfs_mount_shares
+  - nfs_mount_paths
+
+- name: Mount data volume
+  mount: src={{ data_share }} name={{ data_path }} fstype=glusterfs state=mounted opts=defaults,_netdev
