etc/hosts for gluster didnt really work

--- a/adapt_cluster_provisioning/roles/core/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/core/tasks/main.yml
@@ -13,8 +13,9 @@
   user: name=galaxy comment="Galaxy user" uid=1001 state=present shell=/bin/bash
 
 - name: Fix etc/hosts for gluster
-  lineinfile: dest=/etc/hosts regexp='^{{ hostvars[item][hostvars[item]['private_ip_port']]['ipv4']['address'] }}'
-              line="{{ hostvars[item][hostvars[item]['private_ip_port']]['ipv4']['address'] }}	{{ item }}"
+  lineinfile: dest=/etc/hosts
+              regexp="^{{ hostvars[item][hostvars[item]['private_ip_port']]['ipv4']['address'] }}"
+              line="{{ hostvars[item][hostvars[item]['private_ip_port']]['ipv4']['address'] }}   {{ item }}"
               state=present
   with_items: 
   - "{{ groups['fileserver'] }}"
