Correct regex for postgres pg_hba

--- a/adapt_cluster_provisioning/roles/postgres/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/postgres/tasks/main.yml
@@ -22,7 +22,7 @@
   lineinfile: dest=/etc/postgresql/{{ postgres_version }}/main/postgresql.conf regexp="listen_addresses" line="listen_addresses = 'localhost,{{ webserver_ip }}'"
 
 - name: Add webserver and ftpserver to pg_hba
-  lineinfile: dest=/etc/postgresql/{{ postgres_version }}/main/pg_hba.conf regexp='{{ item.address }}' line="host\tgalaxy_adapt\t{{ item.name }}\t{{ item.address }}/32\tmd5"
+  lineinfile: dest=/etc/postgresql/{{ postgres_version }}/main/pg_hba.conf regexp='{{ item.name }}\t{{ item.address }}' line="host\tgalaxy_adapt\t{{ item.name }}\t{{ item.address }}/32\tmd5"
   with_items:
   - { name: "galaxy", address: "{{ webserver_ip }}" }
   - { name: "galaxyftp", address: "{{ ftpserver_ip }}" }
