Also fix galaxy env file for kronik and bullseye

--- a/adapt_cluster_provisioning/roles/hardklor_bullseye/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/hardklor_bullseye/tasks/main.yml
@@ -44,4 +44,12 @@
            envdest=/{{ hardklor_path }}
            toolroot={{ tool_path }}/{{ hardklor_pkg }} ldline="#"
 
+- include: ../../../tasks/tool_dependency_fixer.yml 
+           toolpath=/{{ kronik_path }}/bin
+           envdest=/{{ kronik_path }}
+           toolroot={{ tool_path }}/{{ kronik_pkg }} ldline="#"
 
+- include: ../../../tasks/tool_dependency_fixer.yml 
+           toolpath=/{{ bullseye_path }}/bin
+           envdest=/{{ bullseye_path }}
+           toolroot={{ tool_path }}/{{ bullseye_pkg }} ldline="#"
