Add hardklor to tool_install playbook

--- a/adapt_cluster_provisioning/tool_install_playbook.yml
+++ b/adapt_cluster_provisioning/tool_install_playbook.yml
@@ -47,6 +47,7 @@
   - openms
   - proteinquant
   - msstitch
+  - hardklor_bullseye
   tasks:
   - name: Fix ownership of all tools
     file: path={{ toolshare_dir }} owner=galaxy group=galaxy recurse=yes state=directory
