Private ip sources.list needs to be switched off when building a mirror

--- a/adapt_cluster_provisioning/roles/private_ip/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/private_ip/tasks/main.yml
@@ -2,3 +2,8 @@
 - name: sources.list to fetch from mirrors
   template: src=worker_sources.list.j2 dest=/etc/apt/sources.list
   when: use_mirror is defined and use_mirror
+
+
+- name: sources.list to fetch from the internet 
+  template: src=public_sources.list.j2 dest=/etc/apt/sources.list
+  when: use_mirror is not defined or not use_mirror
