Restart postgres after update and dont turn off proftpd

--- a/adapt_cluster_provisioning/roles/postgres/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/postgres/tasks/main.yml
@@ -27,6 +27,9 @@
   - { name: "galaxy", address: "{{ webserver_ip }}" }
   - { name: "galaxyftp", address: "{{ ftpserver_ip }}" }
 
+- name: Restart postgres
+  service: name=postgresql state=restarted
+
 - name: Create postgres galaxy user
   postgresql_user: name=galaxy 
                    password={{ galaxy_pg_pass }} 
