--- a/adapt_cluster_provisioning/roles/core/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/core/tasks/main.yml
@@ -9,8 +9,11 @@
 - name: Set locale
   command: /usr/sbin/update-locale LANG=en_US.UTF-8 LC_ALL=en_US.UTF-8
 
+- name: Setup galaxy group 
+  user: name={{ galaxy_group }} comment="Galaxy group" gid=1001 state=present
+
 - name: Setup galaxy user
-  user: name=galaxy comment="Galaxy user" uid=1001 state=present shell=/bin/bash
+  user: name=galaxy comment="Galaxy user" uid=1001 group={{ galaxy_group }} state=present shell=/bin/bash
 
 - name: Fix etc/hosts for gluster
   lineinfile: dest=/etc/hosts
