--- a/adapt_cluster_provisioning/roles/core/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/core/tasks/main.yml
@@ -10,7 +10,7 @@
   command: /usr/sbin/update-locale LANG=en_US.UTF-8 LC_ALL=en_US.UTF-8
 
 - name: Setup galaxy group 
-  user: name={{ galaxy_group }} comment="Galaxy group" gid=1001 state=present
+  group: name={{ galaxy_group }} gid=1001 state=present
 
 - name: Setup galaxy user
   user: name=galaxy comment="Galaxy user" uid=1001 group={{ galaxy_group }} state=present shell=/bin/bash
