Galaxy can be ran from NFS or local so broke out a special NFS role, renamed all the refs to the nfs dir and mount all nfs shares in cloud playbook before galaxy role

--- a/adapt_cluster_provisioning/cloud_provisioning.yml
+++ b/adapt_cluster_provisioning/cloud_provisioning.yml
@@ -43,6 +43,7 @@
   roles:
   - nfsdata 
   - nfstools
+  - nfsgalaxy
 
 - hosts: dbserver
   user: ubuntu
@@ -70,8 +71,8 @@
   - credentials/user_data.yml
   roles:
   - slurm
-  - galaxy
   - mount_shares 
+  - galaxy
   - nginx 
 
 - hosts: ftpserver
