--- a/adapt_cluster_provisioning/roles/reboot/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/reboot/tasks/main.yml
@@ -12,4 +12,4 @@
                 port={{ ansible_ssh_port }}
                 state=started
                 delay=2
-  sudo: false
+  become: false
