--- a/adapt_cluster_provisioning/cloud_provisioning.yml
+++ b/adapt_cluster_provisioning/cloud_provisioning.yml
@@ -16,7 +16,7 @@
   - fileserver
   - workers
   user: ubuntu
-  sudo: true
+  become: true
   tasks:
   - name: Dummy task to get info of boxes
     debug: msg="Connected to box"
@@ -30,7 +30,7 @@
   - fileserver
   - workers
   user: ubuntu
-  sudo: true
+  become: true
   roles:
   - update
   - ntp
@@ -39,7 +39,7 @@
 # Prepare fileserver
 - hosts: fileserver
   user: ubuntu
-  sudo: true
+  become: true
   roles:
   - nfsdata 
   - nfstools
@@ -47,7 +47,7 @@
 
 - hosts: dbserver
   user: ubuntu
-  sudo: true
+  become: true
   vars_files:
   - credentials/dbpass.yml
   roles:
@@ -57,15 +57,15 @@
 - hosts:
   - toolserver
   user: ubuntu
-  sudo: true
+  become: true
   roles:
-  - tools
+  - nfstools
 
 
 # Install webserver
 - hosts: webserver
   user: ubuntu
-  sudo: true
+  become: true
   vars_files:
   - credentials/dbpass.yml
   - credentials/user_data.yml
@@ -77,7 +77,7 @@
 
 - hosts: ftpserver
   user: ubuntu
-  sudo: true
+  become: true
   vars_files:
   - credentials/dbpass.yml
   roles:
@@ -88,7 +88,7 @@
 # tables are initialized, which must be done after DBserver is installed
 - hosts: dbserver
   user: ubuntu
-  sudo: true
+  become: true
   tasks:
   - name: Set postgres privileges for galaxy ftp user
     postgresql_privs: database=galaxy_adapt
@@ -97,14 +97,14 @@
                       type=table
                       objs=galaxy_user
                       roles=galaxyftp
-    sudo_user: postgres
+    become_user: postgres
 
 
 # Install slurm, fstab data
 - hosts:
   - workers
   user: ubuntu
-  sudo: true
+  become: true
   roles:
   - slurm
   - mount_shares
@@ -114,7 +114,7 @@
 - hosts:
   - webserver
   - workers
-  sudo: true
+  become: true
   user: ubuntu
   roles:
   - reboot
