--- a/adapt_cluster_provisioning/roles/mount_shares/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/mount_shares/tasks/main.yml
@@ -13,8 +13,8 @@
 - name: Mount tool, galaxy, ftp volumes
   mount: src={{ item.0 }} name={{ item.1 }} fstype=nfs state=mounted opts=defaults,_netdev
   with_together:
-  - nfs_mount_shares
-  - nfs_mount_paths
+  - "{{ nfs_mount_shares }}"
+  - "{{ nfs_mount_paths }}"
 
 - name: Mount data volume
   mount: src={{ data_share }} name={{ data_path }} fstype={{ datafstype }} state=mounted opts=defaults,_netdev
