--- a/adapt_cluster_provisioning/roles/nfsdata/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/nfsdata/tasks/main.yml
@@ -5,7 +5,7 @@
   
 - name: Install fileserver packages
   apt: pkg={{ item }} state=installed
-  with_items: fileserver_packages
+  with_items: "{{ fileserver_packages }}"
 
 - name: Create data share path
   file: path={{ datasharepath }} state=directory owner=galaxy group=galaxy
