--- a/adapt_cluster_provisioning/roles/core/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/core/tasks/main.yml
@@ -26,4 +26,10 @@
   - "{{ groups['webserver'] }}"
   - "{{ groups['ftpserver'] }}"
 
+- name: Create mount points
+  file: path={{ item }} state=directory
+  with_items:
+  - "{{ galaxy_path }}"
+  - "{{ tool_path }}"
+  - "{{ data_path }}"
 
