--- a/adapt_cluster_provisioning/roles/proftpd/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/proftpd/tasks/main.yml
@@ -8,7 +8,7 @@
   file: path={{ ftp_path }} state=directory owner=galaxy group=galaxy
 
 - name: Getting proFTPd
-  get_url: url=ftp://ftp.proftpd.org/distrib/source/{{ proftpd_pkg }}.tar.gz dest=/tmp/{{ proftpd_pkg }}.tar.gz
+  get_url: url=https://github.com/proftpd/proftpd/archive/v1.3.5b.tar.gz dest=/tmp/{{ proftpd_pkg }}.tar.gz
 - name: Untarring proFTPd source
   command: tar xvfz {{ proftpd_pkg }}.tar.gz chdir=/tmp
 - name: Configuring makefile for proFTPd
