--- a/adapt_cluster_provisioning/roles/proftpd/vars/main.yml
+++ b/adapt_cluster_provisioning/roles/proftpd/vars/main.yml
@@ -1,6 +1,6 @@
 ---
 
-proftpd_pkg: proftpd-1.3.4e
+proftpd_pkg: proftpd-1.3.5b
 proftpd_install_dir: /opt/proftpd
 ftpserver_packages:
   - build-essential
